--- a/app/src/main/res/layout/activity_network.xml
+++ b/app/src/main/res/layout/activity_network.xml
@@ -10,6 +10,7 @@
         android:id="@+id/gistText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="monospace"
         android:text="TextView"
         android:textSize="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
